--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -1,5 +1,7 @@
 // Misc.
 $misc: ( z-index-base: 10000, max-features: 20, max-sidebar-links: 20);
+$color-primary-dark: hsla(234, 60, 20, 1);
+$color-secondary-dark: hsla(341, 83, 30, 1);
 // Duration.
 $duration: ( transition: 0.2s, activation: 1s);
 // Size.
