--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,13 +7,14 @@
 @import 'fontawesome-all.min.css';
 
 /*
+	Code tested by admtomas
 	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 // Breakpoints.
-@include breakpoints(( xlarge : ( 1281px, 1680px), large : ( 981px, 1280px), medium : ( 737px, 980px), small : ( 481px, 736px), xsmall : ( 361px, 480px), xxsmall : ( null, 360px)));
+@include breakpoints(( xlarge: ( 1281px, 1680px), large: ( 981px, 1280px), medium: ( 737px, 980px), small: ( 481px, 736px), xsmall: ( 361px, 480px), xxsmall: ( null, 360px)));
 // Base.
 @import 'base/reset';
 @import 'base/page';
