font awesome import

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url(c:\Users\Sir Tomas\Google Drive\PORTFOLIO UWE N REST\admtomas.github.io\assets\sass\fontawesome-all.min.css);
+@import url(fontawesome-all.min.css);
 /*
 	Code tested by admtomas
 	Hyperspace by HTML5 UP
