--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,6 +5,8 @@
 @import 'libs/breakpoints';
 @import 'libs/html-grid';
 @import 'fontawesome-all.min.css';
+@import url(fontawesome-all.min.css);
+;
 
 /*
 	Code tested by admtomas
