--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3154,6 +3154,313 @@ body.is-preload .wrapper.fade > .inner {
   opacity: 0;
 }
 
+.star {
+  z-index: 2;
+  position: absolute;
+  top: 2%;
+  left: 5%;
+  background-image: url("../../../images/star.png");
+  background-size: 15px 15px;
+  width: 15px;
+  height: 15px;
+  opacity: 0.4;
+  -webkit-animation: starShine 3.5s linear infinite;
+          animation: starShine 3.5s linear infinite;
+  -webkit-transition: all 1200ms linear;
+  transition: all 1200ms linear;
+}
+
+.star.two {
+  top: 4%;
+  left: 10%;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.star.three {
+  top: 6%;
+  left: 24%;
+  -webkit-animation-delay: 1.4s;
+          animation-delay: 1.4s;
+}
+
+.star.four {
+  top: -8%;
+  left: 36%;
+  -webkit-animation-delay: 1.8s;
+          animation-delay: 1.8s;
+}
+
+.star.five {
+  top: 10%;
+  left: 40%;
+  -webkit-animation-delay: 2.2s;
+          animation-delay: 2.2s;
+}
+
+.star.six {
+  top: 10%;
+  left: 62%;
+  -webkit-animation-delay: 2.5s;
+          animation-delay: 2.5s;
+}
+
+.star.seven {
+  top: 14%;
+  left: 69%;
+  -webkit-animation-delay: 2.2s;
+          animation-delay: 2.2s;
+}
+
+.star.eight {
+  top: 16%;
+  left: 50%;
+  -webkit-animation-delay: 2.9s;
+          animation-delay: 2.9s;
+}
+
+.star.nine {
+  top: 17%;
+  left: 33%;
+  -webkit-animation-delay: 2.9s;
+          animation-delay: 2.9s;
+}
+
+.star.ten {
+  top: 11%;
+  left: 80%;
+  -webkit-animation-delay: 2.0s;
+          animation-delay: 2.0s;
+}
+
+.star.eleven {
+  top: 7%;
+  left: 90%;
+  -webkit-animation-delay: 2.0s;
+          animation-delay: 2.0s;
+}
+
+.star.twelve {
+  top: -9%;
+  left: 77%;
+  -webkit-animation-delay: 2.2s;
+          animation-delay: 2.2s;
+}
+
+.star.thirteen {
+  top: 3%;
+  left: 48%;
+  -webkit-animation-delay: 2.1s;
+          animation-delay: 2.1s;
+}
+
+.star.fourteen {
+  top: 22%;
+  left: 66%;
+  -webkit-animation-delay: 2.3s;
+          animation-delay: 2.3s;
+}
+
+.star.fifteen {
+  top: 5%;
+  left: 2%;
+  -webkit-animation-delay: 2.3s;
+          animation-delay: 2.3s;
+}
+
+.star.sixteen {
+  top: 50%;
+  left: 24%;
+  -webkit-animation-delay: 1.3s;
+          animation-delay: 1.3s;
+}
+
+.star.seventeen {
+  top: 67%;
+  left: 33%;
+  -webkit-animation-delay: 1.6s;
+          animation-delay: 1.6s;
+}
+
+.star.eighteen {
+  top: 65%;
+  left: 17%;
+  -webkit-animation-delay: 1.9s;
+          animation-delay: 1.9s;
+}
+
+.star.nineteen {
+  top: 67%;
+  left: 25%;
+  -webkit-animation-delay: 1.8s;
+          animation-delay: 1.8s;
+}
+
+.star.twenty {
+  top: 71%;
+  left: 44%;
+  -webkit-animation-delay: 2.0s;
+          animation-delay: 2.0s;
+}
+
+.star.twenty-one {
+  top: 66%;
+  left: 14%;
+  -webkit-animation-delay: 1.4s;
+          animation-delay: 1.4s;
+}
+
+.star.twenty-two {
+  top: 77%;
+  left: 11%;
+  -webkit-animation-delay: 2.4s;
+          animation-delay: 2.4s;
+}
+
+.star.twenty-three {
+  top: -60%;
+  left: 7%;
+  -webkit-animation-delay: 1.4s;
+          animation-delay: 1.4s;
+}
+
+.star.twenty-four {
+  top: -6%;
+  left: 7%;
+  -webkit-animation-delay: 1.4s;
+          animation-delay: 1.4s;
+}
+
+.star.twenty-five {
+  top: -15%;
+  left: 17%;
+  -webkit-animation-delay: 1.4s;
+          animation-delay: 1.4s;
+}
+
+.star.twenty-six {
+  top: -27%;
+  left: 27%;
+  -webkit-animation-delay: 1.1s;
+          animation-delay: 1.1s;
+}
+
+.star.twenty-seven {
+  top: -30%;
+  left: 17%;
+  -webkit-animation-delay: 1.4s;
+          animation-delay: 1.4s;
+}
+
+.star.twenty-eight {
+  top: -33%;
+  left: 37%;
+  -webkit-animation-delay: 1.9s;
+          animation-delay: 1.9s;
+}
+
+.star.twenty-nine {
+  top: -14%;
+  left: 7%;
+  -webkit-animation-delay: 1.1s;
+          animation-delay: 1.1s;
+}
+
+.star.thirty {
+  top: -16%;
+  left: 97%;
+  -webkit-animation-delay: 2.4s;
+          animation-delay: 2.4s;
+}
+
+.star.thirty-0ne {
+  top: -26%;
+  left: 47%;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+.star.thirty-two {
+  top: -36%;
+  left: 57%;
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
+}
+
+.star.thirty-three {
+  top: 60%;
+  left: 77%;
+  -webkit-animation-delay: 2.2s;
+          animation-delay: 2.2s;
+}
+
+.star.thirty-four {
+  top: 80%;
+  left: 67%;
+  -webkit-animation-delay: 2.9s;
+          animation-delay: 2.9s;
+}
+
+.star.thirty-five {
+  top: 70%;
+  left: 57%;
+  -webkit-animation-delay: 1.3s;
+          animation-delay: 1.3s;
+}
+
+.star.thirty-six {
+  top: 90%;
+  left: 37%;
+  -webkit-animation-delay: 1.9s;
+          animation-delay: 1.9s;
+}
+
+@-webkit-keyframes starShine {
+  0% {
+    -webkit-transform: scale(0.3) rotate(0deg);
+            transform: scale(0.3) rotate(0deg);
+    opacity: 0.4;
+  }
+  25% {
+    -webkit-transform: scale(1) rotate(360deg);
+            transform: scale(1) rotate(360deg);
+    opacity: 1;
+  }
+  50% {
+    -webkit-transform: scale(0.3) rotate(720deg);
+            transform: scale(0.3) rotate(720deg);
+    opacity: 0.4;
+  }
+  100% {
+    -webkit-transform: scale(0.3) rotate(0deg);
+            transform: scale(0.3) rotate(0deg);
+    opacity: 0.4;
+  }
+}
+
+@keyframes starShine {
+  0% {
+    -webkit-transform: scale(0.3) rotate(0deg);
+            transform: scale(0.3) rotate(0deg);
+    opacity: 0.4;
+  }
+  25% {
+    -webkit-transform: scale(1) rotate(360deg);
+            transform: scale(1) rotate(360deg);
+    opacity: 1;
+  }
+  50% {
+    -webkit-transform: scale(0.3) rotate(720deg);
+            transform: scale(0.3) rotate(720deg);
+    opacity: 0.4;
+  }
+  100% {
+    -webkit-transform: scale(0.3) rotate(0deg);
+            transform: scale(0.3) rotate(0deg);
+    opacity: 0.4;
+  }
+}
+
 /* Header */
 #header {
   display: -moz-flex;
@@ -3594,6 +3901,26 @@ body.is-preload #sidebar nav ul li {
   background-position: top right;
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  -webkit-box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+
+#intro:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  -webkit-box-shadow: inset 0 0 2000px rgba(255, 255, 255, 0.5);
+          box-shadow: inset 0 0 2000px rgba(255, 255, 255, 0.5);
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
+  margin: -20px;
 }
 
 #intro p {
