--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -39,6 +39,7 @@
 @import 'components/spotlights';
 @import 'components/table';
 @import 'components/wrapper';
+@import 'components/stars';
 // Layout.
 @import 'layout/header';
 @import 'layout/wrapper';
