--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -56,7 +56,12 @@ form {
 }
 
 .map {
+    $gutter: (_size(element-margin) * 0.75);
+    padding: $gutter 0 0 $gutter;
     margin: auto;
+    iframe {
+        border: solid _size(thick-border) _palette(border);
+    }
 }
 
 label {
