--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -5,7 +5,7 @@ $color-secondary-dark: hsla(341, 83, 30, 1);
 // Duration.
 $duration: ( transition: 0.2s, activation: 1s);
 // Size.
-$size: ( border-radius: 0.25em, border-width: 1px, element-height: 2.75em, element-margin: 2em, sidebar-width: 18em, sidebar-height: 3.5em, // when <=large is active
+$size: ( border-radius: 0.25em, border-width: 1px, thick-border: 3px, element-height: 2.75em, element-margin: 2em, sidebar-width: 18em, sidebar-height: 3.5em, // when <=large is active
 inner-width: 75em);
 // Font.
 $font: ( family: (Arial, Helvetica, sans-serif), family-fixed: ('Courier New', monospace), weight: normal, weight-bold: bold, kerning-alt: 0.25em);
