animation and style changes

--- a/assets/sass/layout/_intro.scss
+++ b/assets/sass/layout/_intro.scss
@@ -21,7 +21,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+        box-shadow: inset 600px 600px 7000px $color-primary-dark;
         filter: blur(10px);
         margin: -20px;
     }
