--- a/assets/sass/components/_stars.scss
+++ b/assets/sass/components/_stars.scss
@@ -242,3 +242,60 @@
         opacity: 0.4;
     }
 }
+
+// Shooting star
+.shooting-star {
+    z-index: 2;
+    width: 1px;
+    height: 50px;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: -17%;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), white);
+    animation: shootingStarAnimation 6s linear infinite;
+    -webkit-transition: all 2000ms linear;
+    transition: all 2000ms linear;
+}
+
+@keyframes shootingStarAnimation {
+    from {
+        transform: translateY(0px) translateX(0px) rotate(-45deg);
+        opacity: 1;
+        height: 5px;
+    }
+    to {
+        transform: translateY(2180px) translateX(2180px) rotate(-45deg);
+        opacity: 1;
+        height: 800px;
+    }
+}
+
+.shooting-star-2 {
+    z-index: 2;
+    width: 1px;
+    height: 50px;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    position: absolute;
+    top: -50%;
+    left: 120%;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), white);
+    animation: shootingStarAnimation-2 9s linear infinite;
+    -webkit-transition: all 2000ms linear;
+    transition: all 2000ms linear;
+}
+
+@keyframes shootingStarAnimation-2 {
+    from {
+        transform: translateY(0px) translateX(0px) rotate(-45deg);
+        opacity: 1;
+        height: 5px;
+    }
+    to {
+        transform: translateY(1920px) translateX(1920px) rotate(-45deg);
+        opacity: 1;
+        height: 800px;
+    }
+}
