work experience section filled and jquery function created for toggling view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2644,6 +2644,11 @@ ul.actions.fit.stacked {
   }
 }
 
+#toggled,
+#hide {
+  display: none;
+}
+
 /* Contact */
 ul.contact {
   list-style: none;
