--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2142,7 +2142,12 @@ form > .fields > .field.quarter {
 }
 
 .map {
+  padding: 1.5em 0 0 1.5em;
   margin: auto;
+}
+
+.map iframe {
+  border: solid 3px rgba(255, 255, 255, 0.15);
 }
 
 label {
@@ -2637,6 +2642,11 @@ ul.actions.fit.stacked {
   ul.actions:not(.fixed) li .button.icon:before {
     margin-left: -0.5rem;
   }
+}
+
+#toggled,
+#hide {
+  display: none;
 }
 
 /* Contact */
@@ -3471,6 +3481,100 @@ body.is-preload .wrapper.fade > .inner {
   }
 }
 
+.shooting-star {
+  z-index: 2;
+  width: 1px;
+  height: 50px;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: -17%;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(white));
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), white);
+  -webkit-animation: shootingStarAnimation 6s linear infinite;
+          animation: shootingStarAnimation 6s linear infinite;
+  -webkit-transition: all 2000ms linear;
+  transition: all 2000ms linear;
+}
+
+@-webkit-keyframes shootingStarAnimation {
+  from {
+    -webkit-transform: translateY(0px) translateX(0px) rotate(-45deg);
+            transform: translateY(0px) translateX(0px) rotate(-45deg);
+    opacity: 1;
+    height: 5px;
+  }
+  to {
+    -webkit-transform: translateY(2180px) translateX(2180px) rotate(-45deg);
+            transform: translateY(2180px) translateX(2180px) rotate(-45deg);
+    opacity: 1;
+    height: 800px;
+  }
+}
+
+@keyframes shootingStarAnimation {
+  from {
+    -webkit-transform: translateY(0px) translateX(0px) rotate(-45deg);
+            transform: translateY(0px) translateX(0px) rotate(-45deg);
+    opacity: 1;
+    height: 5px;
+  }
+  to {
+    -webkit-transform: translateY(2180px) translateX(2180px) rotate(-45deg);
+            transform: translateY(2180px) translateX(2180px) rotate(-45deg);
+    opacity: 1;
+    height: 800px;
+  }
+}
+
+.shooting-star-2 {
+  z-index: 2;
+  width: 1px;
+  height: 50px;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  position: absolute;
+  top: -50%;
+  left: 120%;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(white));
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), white);
+  -webkit-animation: shootingStarAnimation-2 9s linear infinite;
+          animation: shootingStarAnimation-2 9s linear infinite;
+  -webkit-transition: all 2000ms linear;
+  transition: all 2000ms linear;
+}
+
+@-webkit-keyframes shootingStarAnimation-2 {
+  from {
+    -webkit-transform: translateY(0px) translateX(0px) rotate(-45deg);
+            transform: translateY(0px) translateX(0px) rotate(-45deg);
+    opacity: 1;
+    height: 5px;
+  }
+  to {
+    -webkit-transform: translateY(1920px) translateX(1920px) rotate(-45deg);
+            transform: translateY(1920px) translateX(1920px) rotate(-45deg);
+    opacity: 1;
+    height: 800px;
+  }
+}
+
+@keyframes shootingStarAnimation-2 {
+  from {
+    -webkit-transform: translateY(0px) translateX(0px) rotate(-45deg);
+            transform: translateY(0px) translateX(0px) rotate(-45deg);
+    opacity: 1;
+    height: 5px;
+  }
+  to {
+    -webkit-transform: translateY(1920px) translateX(1920px) rotate(-45deg);
+            transform: translateY(1920px) translateX(1920px) rotate(-45deg);
+    opacity: 1;
+    height: 800px;
+  }
+}
+
 /* Header */
 #header {
   display: -moz-flex;
@@ -3926,8 +4030,8 @@ body.is-preload #sidebar nav ul li {
   left: 0;
   right: 0;
   bottom: 0;
-  -webkit-box-shadow: inset 0 0 2000px rgba(255, 255, 255, 0.5);
-          box-shadow: inset 0 0 2000px rgba(255, 255, 255, 0.5);
+  -webkit-box-shadow: inset 600px 600px 7000px #141b52;
+          box-shadow: inset 600px 600px 7000px #141b52;
   -webkit-filter: blur(10px);
           filter: blur(10px);
   margin: -20px;
