--- a/assets/sass/components/_actions.scss
+++ b/assets/sass/components/_actions.scss
@@ -84,7 +84,17 @@ ul.actions {
     }
 }
 
-#toggled,
-#hide {
+#toggled-one,
+#hide-one {
+    display: none;
+}
+
+#toggled-two,
+#hide-two {
+    display: none;
+}
+
+#toggled-three,
+#hide-three {
     display: none;
 }
