--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url(c:\Users\admto\Google Drive\PORTFOLIO UWE N REST\admtomas.github.io\assets\sass\fontawesome-all.min.css);
+@import url(c:\Users\admto\Google Drive\uwe copy\admtomas.github.io\assets\sass\fontawesome-all.min.css);
 @import url(fontawesome-all.min.css);
 /*
 	Code tested by admtomas
