code for marking the text inside the whole web page, initial structure

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url(c:\Users\admto\Google Drive\uwe copy\admtomas.github.io\assets\sass\fontawesome-all.min.css);
+@import url(c:\Users\Sir Tomas\Google Drive\PORTFOLIO UWE N REST\admtomas.github.io-1\assets\sass\fontawesome-all.min.css);
 @import url(fontawesome-all.min.css);
 /*
 	Code tested by admtomas
@@ -416,6 +416,10 @@ hr.major {
 
 .align-right {
   text-align: right;
+}
+
+mark {
+  color: red;
 }
 
 /* Row */
