--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -21,6 +21,7 @@
 @import 'base/reset';
 @import 'base/page';
 @import 'base/typography';
+@import 'base/highlights';
 // Component.
 @import 'components/row';
 @import 'components/box';
