--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url(c:\Users\admto\Google Drive\uwe copy\admtomas.github.io\assets\sass\fontawesome-all.min.css);
+@import url(c:\Users\admto\Google Drive\PORTFOLIO UWE N REST\admtomas.github.io-1\assets\sass\fontawesome-all.min.css);
 @import url(fontawesome-all.min.css);
 /*
 	Code tested by admtomas
@@ -416,6 +416,10 @@ hr.major {
 
 .align-right {
   text-align: right;
+}
+
+mark {
+  color: rgba(255, 255, 255, 0.8);
 }
 
 /* Row */
@@ -3205,249 +3209,375 @@ body.is-preload .wrapper.fade > .inner {
   transition: all 1200ms linear;
 }
 
-.star.two {
+.two {
   top: 4%;
   left: 10%;
   -webkit-animation-delay: 1s;
           animation-delay: 1s;
 }
 
-.star.three {
+.three {
   top: 6%;
   left: 24%;
   -webkit-animation-delay: 1.4s;
           animation-delay: 1.4s;
 }
 
-.star.four {
+.four {
   top: -8%;
   left: 36%;
   -webkit-animation-delay: 1.8s;
           animation-delay: 1.8s;
 }
 
-.star.five {
+.five {
   top: 10%;
   left: 40%;
   -webkit-animation-delay: 2.2s;
           animation-delay: 2.2s;
 }
 
-.star.six {
+.six {
   top: 10%;
   left: 62%;
   -webkit-animation-delay: 2.5s;
           animation-delay: 2.5s;
 }
 
-.star.seven {
+.seven {
   top: 14%;
   left: 69%;
   -webkit-animation-delay: 2.2s;
           animation-delay: 2.2s;
 }
 
-.star.eight {
+.eight {
   top: 16%;
   left: 50%;
   -webkit-animation-delay: 2.9s;
           animation-delay: 2.9s;
 }
 
-.star.nine {
+.nine {
   top: 17%;
   left: 33%;
   -webkit-animation-delay: 2.9s;
           animation-delay: 2.9s;
 }
 
-.star.ten {
+.ten {
   top: 11%;
   left: 80%;
   -webkit-animation-delay: 2.0s;
           animation-delay: 2.0s;
 }
 
-.star.eleven {
+.eleven {
   top: 7%;
   left: 90%;
   -webkit-animation-delay: 2.0s;
           animation-delay: 2.0s;
 }
 
-.star.twelve {
+.twelve {
   top: -9%;
   left: 77%;
   -webkit-animation-delay: 2.2s;
           animation-delay: 2.2s;
 }
 
-.star.thirteen {
+.thirteen {
   top: 3%;
   left: 48%;
   -webkit-animation-delay: 2.1s;
           animation-delay: 2.1s;
 }
 
-.star.fourteen {
+.fourteen {
   top: 22%;
   left: 66%;
   -webkit-animation-delay: 2.3s;
           animation-delay: 2.3s;
 }
 
-.star.fifteen {
+.fifteen {
   top: 5%;
   left: 2%;
   -webkit-animation-delay: 2.3s;
           animation-delay: 2.3s;
 }
 
-.star.sixteen {
+.sixteen {
   top: 50%;
   left: 24%;
   -webkit-animation-delay: 1.3s;
           animation-delay: 1.3s;
 }
 
-.star.seventeen {
+.seventeen {
   top: 67%;
   left: 33%;
   -webkit-animation-delay: 1.6s;
           animation-delay: 1.6s;
 }
 
-.star.eighteen {
+.eighteen {
   top: 65%;
   left: 17%;
   -webkit-animation-delay: 1.9s;
           animation-delay: 1.9s;
 }
 
-.star.nineteen {
+.nineteen {
   top: 67%;
   left: 25%;
   -webkit-animation-delay: 1.8s;
           animation-delay: 1.8s;
 }
 
-.star.twenty {
+.twenty {
   top: 71%;
   left: 44%;
   -webkit-animation-delay: 2.0s;
           animation-delay: 2.0s;
 }
 
-.star.twenty-one {
+.twenty-one {
   top: 66%;
   left: 14%;
   -webkit-animation-delay: 1.4s;
           animation-delay: 1.4s;
 }
 
-.star.twenty-two {
+.twenty-two {
   top: 77%;
   left: 11%;
   -webkit-animation-delay: 2.4s;
           animation-delay: 2.4s;
 }
 
-.star.twenty-three {
+.twenty-three {
   top: -60%;
   left: 7%;
   -webkit-animation-delay: 1.4s;
           animation-delay: 1.4s;
 }
 
-.star.twenty-four {
+.twenty-four {
   top: -6%;
   left: 7%;
   -webkit-animation-delay: 1.4s;
           animation-delay: 1.4s;
 }
 
-.star.twenty-five {
+.twenty-five {
   top: -15%;
   left: 17%;
   -webkit-animation-delay: 1.4s;
           animation-delay: 1.4s;
 }
 
-.star.twenty-six {
+.twenty-six {
   top: -27%;
   left: 27%;
   -webkit-animation-delay: 1.1s;
           animation-delay: 1.1s;
 }
 
-.star.twenty-seven {
+.twenty-seven {
   top: -30%;
   left: 17%;
   -webkit-animation-delay: 1.4s;
           animation-delay: 1.4s;
 }
 
-.star.twenty-eight {
+.twenty-eight {
   top: -33%;
   left: 37%;
   -webkit-animation-delay: 1.9s;
           animation-delay: 1.9s;
 }
 
-.star.twenty-nine {
+.twenty-nine {
   top: -14%;
   left: 7%;
   -webkit-animation-delay: 1.1s;
           animation-delay: 1.1s;
 }
 
-.star.thirty {
+.thirty {
   top: -16%;
   left: 97%;
   -webkit-animation-delay: 2.4s;
           animation-delay: 2.4s;
 }
 
-.star.thirty-0ne {
+.thirty-0ne {
   top: -26%;
   left: 47%;
   -webkit-animation-delay: 3s;
           animation-delay: 3s;
 }
 
-.star.thirty-two {
+.thirty-two {
   top: -36%;
   left: 57%;
   -webkit-animation-delay: 0.9s;
           animation-delay: 0.9s;
 }
 
-.star.thirty-three {
+.thirty-three {
   top: 60%;
   left: 77%;
   -webkit-animation-delay: 2.2s;
           animation-delay: 2.2s;
 }
 
-.star.thirty-four {
+.thirty-four {
   top: 80%;
   left: 67%;
   -webkit-animation-delay: 2.9s;
           animation-delay: 2.9s;
 }
 
-.star.thirty-five {
+.thirty-five {
   top: 70%;
   left: 57%;
-  -webkit-animation-delay: 1.3s;
-          animation-delay: 1.3s;
+  -webkit-animation-delay: 1.7s;
+          animation-delay: 1.7s;
 }
 
-.star.thirty-six {
+.thirty-six {
   top: 90%;
   left: 37%;
   -webkit-animation-delay: 1.9s;
           animation-delay: 1.9s;
+}
+
+.thirty-seven {
+  top: 110%;
+  left: 14%;
+  -webkit-animation-delay: 1.9s;
+          animation-delay: 1.9s;
+}
+
+.thirty-eight {
+  top: 97%;
+  left: 19%;
+  -webkit-animation-delay: 2.9s;
+          animation-delay: 2.9s;
+}
+
+.p-one {
+  top: 86%;
+  left: 10%;
+  -webkit-animation-delay: 1.6s;
+          animation-delay: 1.6s;
+}
+
+.p-two {
+  top: 88%;
+  left: 8%;
+  -webkit-animation-delay: 1.6s;
+          animation-delay: 1.6s;
+}
+
+.p-three {
+  top: 92%;
+  left: 9.5%;
+  -webkit-animation-delay: 1.4s;
+          animation-delay: 1.4s;
+}
+
+.p-four {
+  top: 106%;
+  left: 7.5%;
+  -webkit-animation-delay: 1.8s;
+          animation-delay: 1.8s;
+}
+
+.p-five {
+  top: 111%;
+  left: 7%;
+  -webkit-animation-delay: 1.2s;
+          animation-delay: 1.2s;
+}
+
+.p-six {
+  top: 121%;
+  left: 4%;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+
+.p-seven {
+  top: 131%;
+  left: 1%;
+  -webkit-animation-delay: 1.2s;
+          animation-delay: 1.2s;
+}
+
+.p-eight {
+  top: 129%;
+  left: 4%;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.p-nine {
+  top: 127.5%;
+  left: 11%;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.p-ten {
+  top: 128%;
+  left: 12%;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.p-eleven {
+  top: 128.5%;
+  left: 15%;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.p-twelve {
+  top: 127.5%;
+  left: 17.5%;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.p-thirteen {
+  top: 131%;
+  left: 19%;
+  -webkit-animation-delay: 1.1s;
+          animation-delay: 1.1s;
+}
+
+.p-fourteen {
+  top: 130%;
+  left: 16.5%;
+  -webkit-animation-delay: 1.3s;
+          animation-delay: 1.3s;
+}
+
+.p-fifteen {
+  top: 135%;
+  left: 17.5%;
+  -webkit-animation-delay: 1.3s;
+          animation-delay: 1.3s;
+}
+
+.p-sixteen {
+  top: 135%;
+  left: 16%;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
 }
 
 @-webkit-keyframes starShine {
