--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url(c:\Users\Sir Tomas\Google Drive\PORTFOLIO PC\admtomas.github.io\assets\sass\fontawesome-all.min.css);
+@import url(c:\Users\admto\Google Drive\PORTFOLIO PC\admtomas.github.io\assets\sass\fontawesome-all.min.css);
 @import url(fontawesome-all.min.css);
 /*
 	Code tested by admtomas
@@ -2148,6 +2148,7 @@ form > .fields > .field.quarter {
 .map {
   padding: 1.5em 0 0 1.5em;
   margin: auto;
+  overflow: hidden;
 }
 
 .map iframe {
@@ -3471,113 +3472,113 @@ body.is-preload .wrapper.fade > .inner {
 .p-one {
   top: 86%;
   left: 10%;
-  -webkit-animation-delay: 1.6s;
-          animation-delay: 1.6s;
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
 }
 
 .p-two {
   top: 88%;
   left: 8%;
-  -webkit-animation-delay: 1.6s;
-          animation-delay: 1.6s;
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
 }
 
 .p-three {
   top: 92%;
   left: 9.5%;
-  -webkit-animation-delay: 1.4s;
-          animation-delay: 1.4s;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
 }
 
 .p-four {
   top: 106%;
   left: 7.5%;
-  -webkit-animation-delay: 1.8s;
-          animation-delay: 1.8s;
+  -webkit-animation-delay: 1.2s;
+          animation-delay: 1.2s;
 }
 
 .p-five {
   top: 111%;
   left: 7%;
-  -webkit-animation-delay: 1.2s;
-          animation-delay: 1.2s;
+  -webkit-animation-delay: 1.4s;
+          animation-delay: 1.4s;
 }
 
 .p-six {
   top: 121%;
   left: 4%;
-  -webkit-animation-delay: 1.5s;
-          animation-delay: 1.5s;
+  -webkit-animation-delay: 1.6s;
+          animation-delay: 1.6s;
 }
 
 .p-seven {
   top: 131%;
   left: 1%;
-  -webkit-animation-delay: 1.2s;
-          animation-delay: 1.2s;
+  -webkit-animation-delay: 1.8s;
+          animation-delay: 1.8s;
 }
 
 .p-eight {
   top: 129%;
   left: 4%;
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
 }
 
 .p-nine {
   top: 127.5%;
   left: 11%;
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
+  -webkit-animation-delay: 1.8s;
+          animation-delay: 1.8s;
 }
 
 .p-ten {
   top: 128%;
   left: 12%;
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
+  -webkit-animation-delay: 1.6s;
+          animation-delay: 1.6s;
 }
 
 .p-eleven {
   top: 128.5%;
   left: 15%;
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
+  -webkit-animation-delay: 1.4s;
+          animation-delay: 1.4s;
 }
 
 .p-twelve {
   top: 127.5%;
   left: 17.5%;
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
+  -webkit-animation-delay: 1.2s;
+          animation-delay: 1.2s;
 }
 
 .p-thirteen {
   top: 131%;
   left: 19%;
-  -webkit-animation-delay: 1.1s;
-          animation-delay: 1.1s;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
 }
 
 .p-fourteen {
   top: 130%;
   left: 16.5%;
-  -webkit-animation-delay: 1.3s;
-          animation-delay: 1.3s;
+  -webkit-animation-delay: 1.1s;
+          animation-delay: 1.1s;
 }
 
 .p-fifteen {
   top: 135%;
   left: 17.5%;
-  -webkit-animation-delay: 1.3s;
-          animation-delay: 1.3s;
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
 }
 
 .p-sixteen {
   top: 135%;
   left: 16%;
-  -webkit-animation-delay: 1.5s;
-          animation-delay: 1.5s;
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
 }
 
 @-webkit-keyframes starShine {
