--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2155,6 +2155,13 @@ form > .fields > .field.quarter {
   border: solid 3px rgba(255, 255, 255, 0.15);
 }
 
+@media screen and (max-width: 736px) {
+  .map iframe {
+    width: 330px;
+    height: 230px;
+  }
+}
+
 label {
   color: #ffffff;
   font-weight: bold;
