Fonts style refactoring

--- a/assets/sass/components/_icon.scss
+++ b/assets/sass/components/_icon.scss
@@ -6,6 +6,16 @@
 
 /* Icon */
 
+.arrow-color {
+    color: _palette(arrows);
+}
+
+#toggle {
+     :hover {
+        scale: 1.2;
+    }
+}
+
 .icon {
     @include icon;
     border-bottom: none;
