--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,4 @@
-@import url(c:\Users\admto\Google Drive\PORTFOLIO PC\admtomas.github.io\assets\sass\fontawesome-all.min.css);
-@import url(fontawesome-all.min.css);
+@import url(../fontawesome/all.css);
 /*
 	Code tested by admtomas
 	Hyperspace by HTML5 UP
@@ -2360,6 +2359,14 @@ input[type="radio"] :-ms-input-placeholder {
 }
 
 /* Icon */
+.arrow-color {
+  color: #c1db7a;
+}
+
+#toggle :hover {
+  scale: 1.2;
+}
+
 .icon {
   text-decoration: none;
   border-bottom: none;
