--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,8 +4,7 @@
 @import 'libs/vendor';
 @import 'libs/breakpoints';
 @import 'libs/html-grid';
-@import 'fontawesome-all.min.css';
-@import url(fontawesome-all.min.css);
+@import url(../fontawesome/all.css);
 ;
 
 /*
